[package]
name = "prusa_connect_uploader"
version = "0.1.0"
edition = "2021"
authors = ["John Lyon-Smith <john@escapegallery.net>"]
description = "Camera still uploader for Prusa Connect"
repository = "https://github.com/jlyonsmith/prusa_connect_uploader"
readme = "README.md"
keywords = []
categories = []
license = "Unlicense"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5", features = ["derive", "env"] }
duct = "1.0.0"
lazy_static = "1.5"
thiserror = "2.0"
yansi = "1.0"

[dev-dependencies]
criterion = "^0.5"

[[bin]]
name = "prusa-connect-uploader"
path = "src/bin/prusa_connect_uploader.rs"

[profile.release]
strip = "symbols"
